[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aoc"
path = "src/lib.rs"

[[bin]]
name = "day01a"
path = "bin/day01a.rs"

[[bin]]
name = "day01b"
path = "bin/day01b.rs"

[[bin]]
name = "day02a"
path = "bin/day02a.rs"

[[bin]]
name = "day02b"
path = "bin/day02b.rs"

[[bin]]
name = "day03"
path = "bin/day03.rs"

[[bin]]
name = "day04a"
path = "bin/day04a.rs"

[dependencies]